# LLM-evals

./: .env.sample  .gitignore  README.md  SETUP.md  docker-compose.yml  evaluate.py  main.py  pyproject.toml  requirements.txt  task_three.py
learnings/: learnings.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/smartphones/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/smartphones/0/segments/43cbc8c8-22ef-462b-9c1a-51fac217892f/: mutable_id_tracker.mappings
qdrant_storage/collections/smartphones/0/segments/5de9659b-bdcc-400a-ba62-17cf3f2fa529/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/smartphones/0/segments/9175fbf3-0fd4-4259-8ede-400493b7c592/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/smartphones/0/segments/a6eeb483-2db3-4ed5-b543-5753cb0e3de9/: mutable_id_tracker.mappings
qdrant_storage/collections/smartphones/0/segments/dad1e904-cecf-4c63-8214-e23e2ea73fea/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/smartphones/0/segments/fcaee642-766c-4bb0-a1b0-74f653561028/: mutable_id_tracker.mappings
src/llm_evals/: evals.py
tasks/: task_1.md  task_2.md  task_3.md  task_4.md  task_5.md  task_two.py
tasks/task_1/: task_1_solution.md
tasks/task_2/: task_2_solution.md
tasks/task_3/: task_3_solution.md
