[project]
name = "llm-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain~=0.3.26",
    "langchain-community~=0.3.27",
    "langchain-core~=0.3.68",
    "langchain-openai~=0.3.27",
    "langchain-qdrant>=0.2.1",
    "langfuse~=3.0.2",
    "python-dotenv~=1.1.1",
    "qdrant-client~=1.14.3",
    "requests>=2.32.5",
]
